feature/JPA-3: a lot of changes